[package]
name = "rougelike"
version = "0.1.0"
authors = ["Spencer Elliott <spencer.elliott@xe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.6.2" }
specs = "0.16.1"
specs-derive = "0.4.1"
